...
            }
        }
       
            .sheet(isPresented: $revealImagePicker) {
                ImagePicker(sourceType: .photoLibrary) { image in
                    //add note
                    imageData.addNote(image: image, title: "Edit Your Note", desc: "")
                }
                
            }
          //.background(Color(hue: 0.26, saturation: 0.101, brightness: 0.9))
            .background(Color(hue: 0.656, saturation: 0.787, brightness: 0.354))
   
...
